--- a/css/faq.css
+++ b/css/faq.css
@@ -45,7 +45,8 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
-    }    
+        gap: 0rem;
+    }
 
     .faq > main > .right {
         text-align: justify;
