--- a/css/footer.css
+++ b/css/footer.css
@@ -73,11 +73,14 @@ footer > article {
 
     footer > article {
         text-align: left;
+        margin: 1rem 3rem;
+        grid-row: 2/2;
+        padding-bottom: 0rem;
     }
 
     footer > .c-bottom {
-        padding-top: .5rem;
-        padding-bottom: .5rem;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
         text-align: center;
 }
 }
